# gfaestus

./: Cargo.toml  LICENSE  README.md  a3105.test.bed  bed_test.glu  build.rs  filter_records_example.rhai  hash_seq.glu  hash_steps.glu  node_id.glu  overlays.md  path_depth.glu  points_of_interest.rhai  test.rhai  test2.rhai  theme_test.rhai  todo.org
scripts/: handle_path_set.rhai  handle_step_count.rhai  hash_seq_test.rhai  mhc_test.rhai  transparent.rhai
scripts/context_actions/: 01-copy-node-id.rhai  02-copy-node-seq.rhai  02-copy-path-id.rhai  03-copy-path-name.rhai  pan-to-node-modal.rhai
scripts/util/: animate_example.rhai  path_steps.rhai  points_of_interest.rhai
shaders/: bin1.comp  bin2.comp  bin3.comp  fragment.frag  geometry.geom  geometry.geom.spv  gui.vert  gui.vert.spv  node_translate.comp  node_translate.comp.spv  nodes_overlay.frag  nodes_overlay.frag.spv  nodes_simple.frag  nodes_simple.frag.spv  nodes_simple.geom  nodes_simple.geom.spv  nodes_simple.vert  nodes_simple.vert.spv  nodes_themed.frag  nodes_themed.frag.spv  point.frag  point.frag.spv  point.vert  point.vert.spv  post.vert  post.vert.spv  post_blur.frag  post_blur.frag.spv  rect_select.comp  rect_select.comp.spv  vertex.vert
shaders/compute/: bin1.comp  bin1.comp.spv  bin2.comp  bin2.comp.spv  bin3.comp  bin3.comp.spv  node_translate.comp  node_translate.comp.spv  path_view.comp  path_view.comp.spv  path_view_val.comp  path_view_val.comp.spv  rect_select.comp  rect_select.comp.spv
shaders/edges/: edge.comp  edge.comp.spv  edge_binning.comp  edge_binning.comp.spv  edge_orient.glsl  edge_populate_slots.comp  edge_populate_slots.comp.spv  edge_preprocess.comp  edge_preprocess.comp.spv  edge_render.comp  edge_render.comp.spv  edge_slot_render.comp  edge_slot_render.comp.spv  edges.frag  edges.frag.spv  edges.tesc  edges.tesc.spv  edges.tese  edges.tese.spv  edges.vert  edges.vert.spv  geometry.glsl  quads.tesc  quads.tesc.spv  quads.tese  quads.tese.spv  quads.vert  quads.vert.spv  sdf.glsl  tile_intersect.glsl  tile_line_segments.glsl  ubo.glsl
shaders/grid/: fragment.frag  vertex.vert
shaders/gui/: fragment.frag  gui.frag  gui.vert.spv  gui_1d.frag  gui_1d.frag.spv  gui_2d.frag.spv  gui_rgba.frag  gui_rgba.frag.spv  vertex.vert
shaders/nodes/: base.geom.spv  base.tesc  base.tesc.spv  base.tese  base.tese.spv  base.vert  base.vert.spv  fragment.frag  geometry.geom  overlay.frag.spv  overlay_rgb.frag  overlay_rgb.frag.spv  overlay_value.frag  overlay_value.frag.spv  quad.vert  quad.vert.spv  themed.frag.spv  vertex.vert
shaders/nodes_post/: post.frag  post.vert  vertex.vert
shaders/post/: blur.frag  edge.frag  example.frag  example.frag.spv  fragment.frag  pixels_buffer_copy.frag  pixels_buffer_copy.frag.spv  post.vert.spv  post_blur.frag.spv  post_blur.vert.spv  post_edge.frag  (+2 more)
src/: action.rhai  annotations.rs  app.rs  asynchronous.rs  context.rs  geometry.rs  gfa.rs  gluon.rs  graph_query.rs  gui.rs  input.rs  layout.rs  lib.rs  main.rs  main_old.rs  overlays.rs  path_action.rhai  quad_tree.rs  reactor.rs  render.rs  script.rs  ui.rs  universe.rs  util.rs  view.rs  vulkan.rs  window.rs
(+93 files in other folders)
