[package]
name = "gfaestus"
version = "0.1.0"
authors = ["christian <christian@chfi.se>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/chfi/gfaestus"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31"
ash-window = "0.5"
vk-mem = "0.2.2"

winit = "0.24"

egui = "0.11"

crossbeam = "0.8"
parking_lot = "0.11.1"
rayon = "1.5"
futures = { version = "0.3", features = ["thread-pool"] }

image = "0.23"
rgb = "0.8.25"

nalgebra = "0.24"
nalgebra-glm = "0.10"

gfa = { version = "0.10" }
handlegraph = "0.7.0-alpha.6"

anyhow = "1.0"

rustc-hash = "1.1"

bstr = "0.2"

gluon = "0.17.2"
gluon_codegen = "0.17.2"

[profile.dev]
opt-level = 2
